--- a/.dvcignore
+++ b/.dvcignore
@@ -1,11 +1,82 @@
+__pycache__
 .DS_Store
+.DS_Store
+.env
 .idea/
+.idea/
+.installed.cfg
+.ipynb_checkpoints
+.python-version
+.terraform/
+.venv
 .venv/
 .vscode/
+.vscode/
+*.avi
+*.bak
+*.csv
+*.doc
+*.docx
+*.ear
+*.egg
+*.egg-info
+*.feather
+*.jar
 *.log
+*.log
+*.mov
+*.mp3
+*.mp4
+*.nar
+*.parquet
+*.pdf
+*.ppt
+*.pptx
+*.py[cod]
+*.rar
+*.so
+*.swo
 *.swo
 *.swp
+*.swp
+*.swp
+*.tar.gz
 *.temp
+*.temp
+*.tfstate
+*.tfstate.*
 *.tmp
+*.tmp
+*.war
+*.xls
+*.xlsx
+*.zip
+*~
+/data
+/dvclive
+/models
+/notebooks
+/outputs
+/processed_data
+/raw_data
+/reports/figures
+/reports/figures/model_comparison.png
+/reports/metrics/*_metrics.json
+bin
+build
 build/
 combined.txt
+develop-eggs
+dist
+eggs
+env/
+ENV/
+lib
+lib64
+parts
+pip-delete-this-directory.txt
+pip-log.txt
+sdist
+Thumbs.db
+var
+venv/
