--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,10 +1,19 @@
 name: Create Release
-
 on:
   repository_dispatch:
     types:
       - create-release
   workflow_dispatch:
+    inputs:
+      bump_type:
+        description: "Type of version bump"
+        required: true
+        default: "minor"
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -16,37 +25,46 @@ jobs:
     permissions:
       contents: write
       id-token: write
-      attestations: write
+      actions: read
+
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+        with:
+          fetch-depth: 0
 
       - name: Bump Version
         id: tag_version
         uses: anothrNick/github-tag-action@f278d49d30cdd8775cc3e7dd00b5ee11686ee297 # v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: ${{ github.event.inputs.bump_type || 'minor' }}
           WITH_V: true
-          PRERELEASE: true
-          DEFAULT_BUMP: minor
+          RELEASE_BRANCHES: main,master
 
-      - name: Generate attestation for Deliverable 1
-        id: attestation1
-        uses: actions/attest-build-provenance@1c608d11d69870c2092266b3f9a6f3abbf17002c # v1.4.3
+      - name: Generate Attestations
+        id: attestation
+        uses: github/generate-generic-attestations@v1
         with:
-          subject-path: Final_Project_Team_3_Deliverable_1.pdf
-
-      - name: Generate attestation for Deliverable 2
-        id: attestation2
-        uses: actions/attest-build-provenance@1c608d11d69870c2092266b3f9a6f3abbf17002c # v1.4.3
-        with:
-          subject-path: Final_Project_Team_3_Deliverable_2.mp4
-
-      - name: Generate attestation for Deliverable 3
-        id: attestation3
-        uses: actions/attest-build-provenance@1c608d11d69870c2092266b3f9a6f3abbf17002c # v1.4.3
-        with:
-          subject-path: Final_Project_Team_3_Deliverable_3.zip
+          subject-path: |
+            Final_Project_Team_3_Deliverable_1.pdf
+            Final_Project_Team_3_Deliverable_2.mp4
+            Final_Project_Team_3_Deliverable_3.zip
+          predicate-type: "https://slsa.dev/provenance/v0.2"
+          predicate: |
+            {
+              "buildType": "https://github.com/actions/runner",
+              "builder": {
+                "id": "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+              },
+              "invocation": {
+                "configSource": {
+                  "uri": "git+https://github.com/${{ github.repository }}.git",
+                  "revision": "${{ github.sha }}",
+                  "entryPoint": ".github/workflows/create-release.yml"
+                }
+              }
+            }
 
       - name: Release
         uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # v2.0.8
@@ -58,23 +76,19 @@ jobs:
           generate_release_notes: true
           draft: false
           prerelease: false
-          make_latest: true
           files: |
             Final_Project_Team_3_Deliverable_1.pdf
             Final_Project_Team_3_Deliverable_2.mp4
             Final_Project_Team_3_Deliverable_3.zip
-            ${{ steps.attestation1.outputs.attestation-path }}
-            ${{ steps.attestation2.outputs.attestation-path }}
-            ${{ steps.attestation3.outputs.attestation-path }}
+            ${{ steps.attestation.outputs.bundle-path }}
           body: |
-            DELIVERABLES:
-              - [Final_Project_Team_3_Deliverable_1.pdf](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_1.pdf)
-              - [Final_Project_Team_3_Deliverable_2.mp4](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_2.mp4)
-              - [Final_Project_Team_3_Deliverable_3.zip](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_3.zip)
+            ## DELIVERABLES:
+            - [Final_Project_Team_3_Deliverable_1.pdf](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_1.pdf)
+            - [Final_Project_Team_3_Deliverable_2.mp4](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_2.mp4)
+            - [Final_Project_Team_3_Deliverable_3.zip](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_3.zip)
 
-            ATTESTATIONS:
-              - [Attestation for Deliverable 1](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/${{ steps.attestation1.outputs.attestation-name }})
-              - [Attestation for Deliverable 2](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/${{ steps.attestation2.outputs.attestation-name }})
-              - [Attestation for Deliverable 3](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/${{ steps.attestation3.outputs.attestation-name }})
+            ## Attestation Information:
+            **Bundle Path:** ${{ steps.attestation.outputs.bundle-path }}
+            **Predicate Type:** ${{ steps.attestation.outputs.predicate-type }}
 
-            This release includes build provenance attestations for each deliverable for supply chain security verification.
+            For more details, please check the attached attestation bundle.
