--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -23,7 +23,7 @@ jobs:
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     steps:
-      - name: Check out main branch
+      - name: Checkout Repository
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
         with:
           ref: main
