--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -26,7 +26,6 @@ jobs:
       contents: write
       id-token: write
       actions: read
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -65,12 +64,8 @@ jobs:
                 }
               }
             }
-
-      - name: Upload Attestation as Artifact
-        uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 # v4.4.0
-        with:
-          name: attestation
-          path: ${{ steps.attestation.outputs.bundle-path }}
+          show-summary: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Release
         uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # v2.0.8
