--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -28,27 +28,44 @@ jobs:
       actions: read
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       - name: Bump Version
         id: tag_version
-        uses: anothrNick/github-tag-action@f278d49d30cdd8775cc3e7dd00b5ee11686ee297 # v1
+        uses: anothrNick/github-tag-action@1.67.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: ${{ github.event.inputs.bump_type || 'minor' }}
           WITH_V: true
           RELEASE_BRANCHES: main
 
-      - name: Generate Attestations
-        id: attestation
-        uses: github/generate-generic-attestations@v1
+      - name: Generate SLSA Provenance
+        uses: slsa-framework/slsa-github-generator@v1
         with:
+          base64-subjects: ${{ steps.hash_files.outputs.hashes }}
+          upload-assets: true
+
+      - name: Generate SBOM
+        uses: anchore/sbom-action@v0.15.1
+        with:
+          format: cyclonedx-json
+          output-file: sbom.json
+
+      - name: Generate Attestations
+        uses: actions/attest@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          show-summary: true
           subject-path: |
             Final_Project_Team_3_Deliverable_1.pdf
             Final_Project_Team_3_Deliverable_2.mp4
             Final_Project_Team_3_Deliverable_3.zip
+            sbom.json
+            .codacy.yml
+            .flake8
+            .pylintrc
           predicate-type: "https://slsa.dev/provenance/v0.2"
           predicate: |
             {
@@ -62,34 +79,42 @@ jobs:
                   "revision": "${{ github.sha }}",
                   "entryPoint": ".github/workflows/create-release.yml"
                 }
-              }
+              },
+              "materials": [
+                {
+                  "uri": "git+https://github.com/${{ github.repository }}.git",
+                  "digest": {
+                    "sha256": "${{ github.sha }}"
+                  }
+                }
+              ]
             }
-          show-summary: true
-          github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Release
-        uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # v2.0.8
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           name: Final Project Deliverables ${{ steps.tag_version.outputs.new_tag }}
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           generate_release_notes: true
-          draft: false
-          prerelease: false
           files: |
             Final_Project_Team_3_Deliverable_1.pdf
             Final_Project_Team_3_Deliverable_2.mp4
             Final_Project_Team_3_Deliverable_3.zip
+            sbom.json
             ${{ steps.attestation.outputs.bundle-path }}
           body: |
             ## DELIVERABLES:
             - [Final_Project_Team_3_Deliverable_1.pdf](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_1.pdf)
             - [Final_Project_Team_3_Deliverable_2.mp4](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_2.mp4)
             - [Final_Project_Team_3_Deliverable_3.zip](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_3.zip)
+            - [sbom.json](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/sbom.json)
 
             ## Attestation Information:
             **Bundle Path:** ${{ steps.attestation.outputs.bundle-path }}
             **Predicate Type:** ${{ steps.attestation.outputs.predicate-type }}
 
-            For more details, please check the attached attestation bundle.
+            SLSA Provenance is attached to this release.
+
+            For more details, please check the attached attestation bundle and SLSA provenance.
