--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -25,7 +25,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
-      actions: read
+      attestations: write
     steps:
       - name: Checkout Repository
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -50,7 +50,6 @@ jobs:
       - name: Generate Attestations
         uses: actions/attest@67422f5511b7ff725f4dbd6fb9bd2cd925c65a8d # v1.4.1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           show-summary: true
           subject-path: |
             Final_Project_Team_3_Deliverable_1.pdf
