--- a/.github/workflows/package-repo.yml
+++ b/.github/workflows/package-repo.yml
@@ -71,8 +71,8 @@ jobs:
       - name: Zip Repository
         run: zip -r -0 $(cat files.txt) | pigz -9 > Final_Project_Team_3_Deliverable_3.zip
 
-      - name: Check File Size
-        run: ls -lh Final_Project_Team_3_Deliverable_3.zip
+      - name: Get File Size
+        run: echo "FILESIZE=$(stat -c%s Final_Project_Team_3_Deliverable_3.zip)" >> $GITHUB_ENV
 
       - name: Configure Git
         run: |
@@ -82,11 +82,11 @@ jobs:
 
       - name: Push to Remote
         run: |
-          git add  Final_Project_Team_3_Deliverable_3.zip
+          git add Final_Project_Team_3_Deliverable_3.zip
           if git diff --staged --quiet; then
             echo "No changes detected. Skipping commit and push."
           else
-            git commit -m "DELIVERABLE: Final_Project_Team_3_Deliverable_3.zip"
+            git commit -m "FILESIZE: $FILESIZE bytes"
             git pull origin main
             git push origin main
             echo "Changes committed and pushed successfully."
