add id to attest action

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -48,6 +48,7 @@ jobs:
           output-file: sbom.json
 
       - name: Generate Attestations
+        id: attestation
         uses: actions/attest@67422f5511b7ff725f4dbd6fb9bd2cd925c65a8d # v1.4.1
         with:
           show-summary: true
