--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -96,16 +96,41 @@ jobs:
             sbom.json
             ${{ steps.attestation.outputs.bundle-path }}
           body: |
-            ## DELIVERABLES:
-            - [Final_Project_Team_3_Deliverable_1.pdf](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_1.pdf)
-            - [Final_Project_Team_3_Deliverable_2.mp4](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_2.mp4)
-            - [Final_Project_Team_3_Deliverable_3.zip](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_3.zip)
-            - [sbom.json](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/sbom.json)
+            # Diabetic Readmission Risk Prediction - Final Project Deliverables ${{ steps.tag_version.outputs.new_tag }}
 
-            ## Attestation Information:
-            **Bundle Path:** ${{ steps.attestation.outputs.bundle-path }}
-            **Predicate Type:** ${{ steps.attestation.outputs.predicate-type }}
+            ## 📊 Project Overview
+            This release contains the final deliverables for our Diabetic Readmission Risk Prediction project. It includes a comprehensive design document, a video presentation demonstrating the ML system operation, and the complete project codebase.
 
-            SLSA Provenance is attached to this release.
+            ## 📦 Deliverables
 
-            For more details, please check the attached attestation bundle and SLSA provenance.
+            1. **📄 ML System Design Document**
+              - File: [Final_Project_Team_3_Deliverable_1.pdf](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_1.pdf)
+              - Description: Detailed documentation of our ML system design, including problem statement, impact measurement, security and ethical considerations, and solution overview.
+
+            2. **🎥 ML System Operation Validation**
+              - File: [Final_Project_Team_3_Deliverable_2.mp4](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_2.mp4)
+              - Description: Video demonstration of our ML system, showcasing key components such as feature stores, monitoring dashboards, and model deployment.
+
+            3. **💻 Project Codebase**
+              - File: [Final_Project_Team_3_Deliverable_3.zip](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/Final_Project_Team_3_Deliverable_3.zip)
+              - Description: The complete source code for our ML system, including data processing, model training, and evaluation scripts.
+
+            ## 🔒 Security and Verification
+
+            - **SBOM (Software Bill of Materials)**
+              - File: [sbom.json](https://github.com/${{ github.repository }}/releases/download/${{ steps.tag_version.outputs.new_tag }}/sbom.json)
+              - Description: A comprehensive inventory of all software components used in this project.
+
+            - **Attestation Information**
+              - Bundle Path: ${{ steps.attestation.outputs.bundle-path }}
+              - Predicate Type: ${{ steps.attestation.outputs.predicate-type }}
+              - Description: Cryptographic evidence of the build process and artifact integrity.
+
+            ## 📝 Release Notes
+            For detailed information about changes and improvements in this version, please refer to the automatically generated release notes above.
+
+            ## 🚀 Getting Started
+            1. Download the desired files from the list above.
+            2. Refer to the ML System Design Document (PDF) for a comprehensive understanding of the project.
+            3. Watch the ML System Operation Validation video for a demonstration of the system in action.
+            4. Extract and explore the Project Codebase (ZIP) to dive into the implementation details.
