--- a/.github/workflows/aws-nuke.yml
+++ b/.github/workflows/aws-nuke.yml
@@ -11,7 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
-      - name: Run AWS Actions
-        uses: drengskapur/aws-actions@v1
+
+      # NOTE: NOT READY TO BE TESTED
+      # - name: Run AWS Actions
+      #   uses: drengskapur/aws-actions@v1
