--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: ["main"]
   schedule:
-    - cron: "39 21 * * 0" # Run this job at 9:39 PM every Sunday
+    - cron: "39 21 * * 0"
   workflow_dispatch:
 
 permissions:
@@ -21,32 +21,44 @@ jobs:
     name: Codacy Security Scan
     runs-on: ubuntu-latest
     steps:
-      - name: Pull Codacy Images
-        run: |
-          docker pull codacy/codacy-analysis-cli:4.0.0
-          docker pull codacy/codacy-shellcheck:2.4.0
-          docker pull codacy/codacy-metrics-cloc:0.2.4
-          docker pull codacy/codacy-bandit:2.2.1
-          docker pull codacy/codacy-metrics-radon:0.1.66
-          docker pull codacy/codacy-jackson-linter:5.2.1
-          docker pull codacy/codacy-prospector:2.2.0
-          docker pull codacy/codacy-pylint-python3:2.2.2
-          docker pull codacy/codacy-duplication-pmdcpd:2.0.145
-
       - name: Checkout Repository
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+
+      - name: Download Codacy Analysis CLI Script
+        id: download-script
+        run: |
+          wget -O codacy-analysis-cli.sh https://raw.githubusercontent.com/codacy/codacy-analysis-cli/4.0.0/bin/codacy-analysis-cli.sh
+          chmod +x codacy-analysis-cli.sh
+          echo "SCRIPT_PATH=$GITHUB_WORKSPACE/codacy-analysis-cli.sh" >> $GITHUB_OUTPUT
+
+      - name: Cache Docker Layers
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: /home/runner/.docker/buildx/
+          key: ${{ runner.os }}-buildx-${{ hashFiles('codacy-analysis-cli.sh') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Set Up QEMU
+        uses: docker/setup-qemu-action@49b3bc8e6bdd4a60e6116a5414239cba5943d3cf # v3.2.0
+
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@988b5a0280414f521da01fcc63a27aeeb4b104db # v3.6.1
 
       - name: Run Codacy Analysis CLI
-        uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b # 1.1.0
-        with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          verbose: true
-          output: results.sarif
-          format: sarif
-          gh-code-scanning-compat: true
-          max-allowed-issues: 2147483647
+        env:
+          CODACY_ANALYSIS_CLI_VERSION: 4.0.0
+          CLI_SCRIPT_PATH: ${{ steps.download-script.outputs.SCRIPT_PATH }}
+        run: |
+          ${{ steps.download-script.outputs.SCRIPT_PATH }} analyze \
+            --verbose \
+            --project-token ${{ secrets.CODACY_PROJECT_TOKEN }} \
+            --format sarif \
+            --output results.sarif \
+            --gh-code-scanning-compat \
+            --max-allowed-issues 2147483647
 
-      - name: Upload SARIF results file
+      - name: Upload SARIF Results File
         uses: github/codeql-action/upload-sarif@5618c9fc1e675841ca52c1c6b1304f5255a905a0 # codeql-bundle-v2.19.0
         with:
           sarif_file: results.sarif
