--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: ["main"]
   schedule:
-    - cron: "39 21 * * 0"
+    - cron: "39 21 * * 0" # Run this job at 9:39 PM every Sunday
   workflow_dispatch:
 
 permissions:
@@ -22,20 +22,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
-      - name: Set Up QEMU
+      - name: Cache Docker layers
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: /home/runner/.docker/buildx/
+          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile*') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@49b3bc8e6bdd4a60e6116a5414239cba5943d3cf # v3.2.0
 
-      - name: Set Up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@988b5a0280414f521da01fcc63a27aeeb4b104db # v3.6.1
 
-      - name: Cache Docker
-        uses: docker/build-push-action@32945a339266b759abcbdc89316275140b0fc960 # v6.8.0
-        with:
-          push: false
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Pull Codacy Images
+        run: |
+          docker pull codacy/codacy-analysis-cli:4.0.0
+          docker pull codacy/codacy-shellcheck:2.4.0
+          docker pull codacy/codacy-metrics-cloc:0.2.4
+          docker pull codacy/codacy-bandit:2.2.1
+          docker pull codacy/codacy-metrics-radon:0.1.66
+          docker pull codacy/codacy-jackson-linter:5.2.1
+          docker pull codacy/codacy-prospector:2.2.0
+          docker pull codacy/codacy-pylint-python3:2.2.2
+          docker pull codacy/codacy-duplication-pmdcpd:2.0.145
 
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@97bf5df3c09e75f5bcd72695998f96ebd701846e # v4.4.5
@@ -48,7 +61,7 @@ jobs:
           gh-code-scanning-compat: true
           max-allowed-issues: 2147483647
 
-      - name: Upload SARIF Results File
+      - name: Upload SARIF results file
         uses: github/codeql-action/upload-sarif@5618c9fc1e675841ca52c1c6b1304f5255a905a0 # codeql-bundle-v2.19.0
         with:
           sarif_file: results.sarif
