--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -24,12 +24,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
-      - name: Cache Docker layers
+      - name: Cache Docker Layers
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: /home/runner/.docker/buildx/
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile*') }}
+          key: ${{ runner.os }}-buildx-${{ github.ref_name }}-python
           restore-keys: |
+            ${{ runner.os }}-buildx-${{ github.ref_name }}-
             ${{ runner.os }}-buildx-
 
       - name: Set up Docker Buildx
