add trigger for package updates for pdf generation

--- a/.github/workflows/generate-pdfs.yml
+++ b/.github/workflows/generate-pdfs.yml
@@ -6,6 +6,7 @@ on:
       - ".github/workflows/generate-pdfs.yml"
       - "docs/design-document/Final_Project_Team_3_Deliverable_1.tex"
       - "docs/design-document/references.bib"
+      - "packages-tex.txt"
   workflow_dispatch:
 
 concurrency:
