--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -49,3 +49,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@5618c9fc1e675841ca52c1c6b1304f5255a905a0 # codeql-bundle-v2.19.0
         with:
           sarif_file: results.sarif
+          category: codacy
