update design doc

--- a/.gitignore
+++ b/.gitignore
@@ -19,25 +19,34 @@ __pycache__/
 .tox/
 .venv/
 .vscode/
+*.aux
 *.bbl
+*.bcf
+*.blg
 *.cover
 *.db
 *.egg
 *.egg-info/
+*.fdb_latexmk
+*.fls
 *.joblib
 *.log
 *.manifest
 *.mo
+*.out
 *.pot
 *.py[cod]
 *.rdb
+*.run.xml
 *.so
 *.spec
 *.swo
 *.swp
 *.synctex.gz
+*.synctex.gz(busy)
 *.temp
 *.tmp
+*.toc
 build/
 combined.txt
 coverage.xml
