--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,95 +1,82 @@
 ---
 engines:
   duplication:
-    enabled: false
-    minTokenMatch: 20
-    skipLexicalErrors: false
-    ignoreLiterals: false
-    ignoreIdentifiers: true
-    ignoreAnnotations: false
-    ignoreUsings: false
-  ameba:
-    enabled: false
-  bandit:
-    enabled: false
-  brakeman:
-    enabled: false
-  checkov:
-    enabled: false
-  checkstyle:
-    enabled: false
-  codacy-scalameta-pro:
-    enabled: false
-  codenarc:
-    enabled: false
-  coffeelint:
-    enabled: false
-  cppcheck:
-    enabled: false
-  credo:
-    enabled: false
-  dartanalyzer:
-    enabled: false
-  detekt:
-    enabled: false
-  eslint-8:
-    enabled: false
-  flawfinder:
-    enabled: false
-  hadolint:
-    enabled: false
-  jacksonlinter:
-    enabled: false
-  markdownlint:
-    enabled: false
-  phpcs:
-    enabled: false
-  phpmd:
-    enabled: false
-  pmd:
-    enabled: false
-  pmdcpd:
-    enabled: false
-  prospector:
-    enabled: false
-  psscriptanalyzer:
-    enabled: false
+    enabled: true
+    exclude_patterns:
+      - "**/test/**"
+      - "**/*_test.py"
+    config:
+      languages:
+        python:
+          python_version: 3
+    languages:
+      - python
+    mass_threshold: 40
+    min_tokens: 70
+    identical_nodes_only: true
+
   pylintpython3:
     enabled: true
-  remark-lint:
-    enabled: false
-  revive:
-    enabled: false
-  rubocop:
-    enabled: false
-  scalastyle:
-    enabled: false
-  semgrep:
-    enabled: false
-  shellcheck:
-    enabled: false
-  sonarcsharp:
-    enabled: false
-  sonarvb:
-    enabled: false
-  spectral:
-    enabled: false
-  SQLint:
-    enabled: false
-  stylelint:
-    enabled: false
-  swiftlint:
-    enabled: false
+  flake8:
+    enabled: true
+  bandit:
+    enabled: true
+  mypy:
+    enabled: true
+  pydocstyle:
+    enabled: true
   trivy:
-    enabled: false
-  tsqllint:
-    enabled: false
+    enabled: true
+  shellcheck:
+    enabled: true
+  semgrep:
+    enabled: true
+  markdownlint:
+    enabled: true
+  hadolint:
+    enabled: true
+
+  # Disabled engines
+  ameba: { enabled: false }
+  brakeman: { enabled: false }
+  checkov: { enabled: false }
+  checkstyle: { enabled: false }
+  codacy-scalameta-pro: { enabled: false }
+  codenarc: { enabled: false }
+  coffeelint: { enabled: false }
+  cppcheck: { enabled: false }
+  credo: { enabled: false }
+  dartanalyzer: { enabled: false }
+  detekt: { enabled: false }
+  eslint-8: { enabled: false }
+  flawfinder: { enabled: false }
+  jacksonlinter: { enabled: false }
+  phpcs: { enabled: false }
+  phpmd: { enabled: false }
+  pmd: { enabled: false }
+  pmdcpd: { enabled: false }
+  prospector: { enabled: false }
+  psscriptanalyzer: { enabled: false }
+  remark-lint: { enabled: false }
+  revive: { enabled: false }
+  rubocop: { enabled: false }
+  scalastyle: { enabled: false }
+  sonarcsharp: { enabled: false }
+  sonarvb: { enabled: false }
+  spectral: { enabled: false }
+  SQLint: { enabled: false }
+  stylelint: { enabled: false }
+  swiftlint: { enabled: false }
+  tsqllint: { enabled: false }
 
 include_paths:
-  - "configs/**"
-  - "huggingface/app.py"
-  - "src/**"
-  - ".github/**"
+  - "src/**/*.py"
+  - "scripts/**/*.py"
+  - "scripts/**/*.sh"
+  - "configs/**/*.yaml"
+  - "**/*.md"
+  - "**/Dockerfile"
+  - ".github/workflows/**/*.yml"
 
 exclude_paths:
   - ".devcontainer/**"
@@ -117,7 +104,6 @@ exclude_paths:
   - "node_modules/**"
   - "notebooks/**"
   - "outputs/**"
-  - "scripts/**"
   - "src/dvclive/**"
   - "temp/**"
   - "terraform/**"
@@ -125,9 +111,59 @@ exclude_paths:
   - "video-assets/**"
 
 languages:
-  python:
+  python: { enabled: true }
+  shell: { enabled: true }
+  dockerfile: { enabled: true }
+  markdown: { enabled: true }
+  yaml: { enabled: true }
+  javascript: { enabled: false }
+  typescript: { enabled: false }
+
+tools:
+  flake8:
     enabled: true
-  javascript:
-    enabled: false
-  typescript:
-    enabled: false
+    config: .flake8
+    python_version: 3
+  pylint:
+    enabled: true
+    config: .pylintrc
+    python_version: 3
+  mypy:
+    enabled: true
+    config: mypy.ini
+    python_version: 3
+  pydocstyle:
+    enabled: true
+    python_version: 3
+  bandit:
+    enabled: true
+  trivy:
+    enabled: true
+  shellcheck:
+    enabled: true
+    include:
+      - "**/*.sh"
+      - "**/*.bash"
+  semgrep:
+    enabled: true
+    include:
+      - "**/*.py"
+      - "**/*.yaml"
+      - "**/*.yml"
+    rules:
+      - python
+      - security
+      - best-practice
+  markdownlint:
+    enabled: true
+    include:
+      - "**/*.md"
+  hadolint:
+    enabled: true
+    include:
+      - "**/Dockerfile"
+
+ignore:
+  - "**/*_test.py"
+  - "**/test_*.py"
+  - "**/tests/**"
