--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: /var/cache/apt/archives
-          key: ${{ runner.os }}-apt-${{ hashFiles('/etc/apt/sources.list') }}
+          key: ${{ runner.os }}-apt-${{ hashFiles('.github/workflows/generate-video.yml') }}
           restore-keys: |
             ${{ runner.os }}-apt-
 
